Fix new game/score button overlap

--- a/app/assets/stylesheets/scoreboard.scss
+++ b/app/assets/stylesheets/scoreboard.scss
@@ -10,7 +10,7 @@ body, html, #scoreboard {
 
 .new-game-button {
   position: absolute;
-  bottom: 0;
+  bottom: 1em;
   width: 100%;
   text-align: center;
 }
@@ -27,6 +27,11 @@ body, html, #scoreboard {
   justify-content: space-between;
   text-align: center;
 }
+
 .score {
   font-size: 30em;
+}
+
+.score-button {
+  margin-bottom: 3em;
 }
